# 2025_20799326

./: .gitignore  README.md  adder_8h.html  git-cheat-sheet.txt  hi_and_date.cmd  index.html
.github/workflows/: doxygen-deploy.yml
Worksheet3/: .gitignore
Worksheet4/Calc/: CMakeLists.txt  adder.h
Worksheet5/: .gitignore  CMakeLists.txt  adder.h
Worksheet5/html/: adder_8h.html  adder_8h_source.html
Worksheet5/latex/: adder_8h.tex  adder_8h_source.tex
